--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "codeigniter4/framework": "^4.0",
-        "google/apiclient": "2.0"
+        "google/apiclient": "2.0",
+        "mpdf/mpdf": "^8.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
